# agentbom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: agentbom-example.yml  ci.yml  release.yml
docs/: demo-workflow.md  github-action.md  launch.md  mcp-security-analysis.md  output-schema.json  report-guide.md
docs/images/: README.md
docs/templates/: release-notes.md
examples/: README.md
examples/customer-support-agent/: README.md  agent.py  mcp.json  policy.md  requirements.txt
examples/mcp-risky-agent/: AGENTS.md  README.md  agent.py  mcp.json  requirements.txt
examples/mcp-safe-agent/: .mcp.json  AGENTS.md  README.md  agent.py  policy.md  requirements.txt
examples/policies/: mcp-policy.yaml
examples/research-agent/: AGENTS.md  README.md  agent.py  requirements.txt
examples/simple_agent/: AGENTS.md  agent.py
src/agentbom/: __init__.py  cli.py  cyclonedx.py  detectors.py  diff.py  github_summary.py  graph.py  html_report.py  mcp.py  mermaid.py  policy.py  reachability.py  report.py  risk.py  sarif.py  (+1 more)
src/agentbom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_detectors.py  test_diff.py  test_graph.py  test_mcp_demos.py  test_mermaid.py  test_output_schema.py  test_policy.py  test_scanner.py
(+15 files in other folders)
