[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbom"
version = "0.1.0"
description = "Minimal bill of materials generator for AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentBOM contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentbom = "agentbom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
