[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentbom"
version = "0.5.0"
description = "Minimal bill of materials generator for AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentBOM contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
agentbom = "agentbom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
